syntax = "proto3";
package nest_rpc;

service NestRpcService{
    rpc Heartbeat(HeartbeatRequest) returns (HeartbeatReply);
}
message HeartbeatRequest{
    string client = 1;
}
message HeartbeatReply{
    int64 rand = 1;
}